--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,22 +6,12 @@ pipeline {
         }
     }
     stages {
-        stage('Build') {
+       stage('Build') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+                sh 'mvn -B -DskipTests package'
             }
         }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                success {
-                    junit 'jspwiki-war/target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('SCA') {
+        stage('Software Composition Analysis') {
             steps {
                 dependencyCheckAnalyzer datadir: '/home/hirosh7/OWASP_NVD_Updates', hintsFile: '',
                 includeCsvReports: false, includeHtmlReports: true, includeJsonReports: false,
@@ -35,12 +25,27 @@ pipeline {
                }
            }
         }
-        stage('SAST') {
-            steps {
-                sh 'mvn findbugs:findbugs'
-                findbugs canComputeNew: false, defaultEncoding: '', excludePattern: '', healthy: '',
-                includePattern: '', isRankActivated: true, pattern: '**/findbugsXml.xml', unHealthy: ''
+        stage('SonarQube Analysis') {
+            environment {
+                SCANNER_URL = 'http://192.168.0.25:8888'
             }
+            steps {
+               withSonarQubeEnv('Jenkins SonarQube') {
+                   sh 'mvn sonar:sonar -Dsonar.host.url=${SCANNER_URL}'
+               }
+            }
+        }
+        stage('SonarQube Q-Gate Check') {
+           steps {
+             timeout(time: 2, unit: 'MINUTES') {
+                  waitForQualityGate abortPipeline: true
+             }
+           }
+        }
+        stage('OWASP ZAP Scan') {
+                steps {
+                    sh 'echo Scanning with OWASP ZAP'
+                }
         }
     }
 }
