--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
+      <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
+      <dependency>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>3.6.0.1398</version>
+      </dependency>
+      <dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.26</version>
